Fixed some spacing on homepage.

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -2,7 +2,7 @@
 .parallax {
     background: url('/assets/img/REBackground2.png') no-repeat center;
     background-size: cover;
-    height: 100vh;
+    height: 90vh;
     z-index: -1;
     position: relative;
 }
@@ -109,7 +109,7 @@
 }
 
 #portfolio {
-    margin-top: 5rem;
+    margin-top: 2rem;
     margin-bottom: 5rem;
 }
 
